--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Can't Stand The Rain</title>
+  </head>
+  <body>
     <main></main>
-</body>
-<script type="module" src="js/uniqueYear.js"></script>
+  </body>
+  <script type="module" src="js/uniqueYear.js"></script>
 </html>
